Fixed crash when right clicking on a header

BUG:226290